# langquality

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yamllint.yml  CHANGELOG.md  CLI_USAGE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  README.md  mkdocs.yml  mypy.ini  profile_performance.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CI_SETUP.md  CODEOWNERS  DISCUSSIONS_SETUP.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  language_pack_submission.md
.github/workflows/: ci.yml  docs.yml  lint.yml  release.yml
config/: default_config.yaml  example_config.yaml
docs/: DOCUMENTATION_SUMMARY.md  Makefile  PACKAGING_SUMMARY.md  PYPI_PUBLICATION_GUIDE.md  README.md  RELEASE_PROCESS.md  best_practices.md  conf.py  configuration_guide.md  data_loading_guide.md  development.md  faq.md  index.md  language_pack_guide.md  maintainers.md  migration_guide.md  quickstart.md  roadmap.md  support.md  user_guide.md
docs/api_reference/: README.md
docs/developer_guide/: architecture.md  creating_analyzers.md  plugin_system.md
docs/user_guide/: analyzing_data.md  installation.md
src/langquality/: __init__.py  __main__.py  cli.py
src/langquality/analyzers/: __init__.py  base.py  diversity.py  domain.py  gender_bias.py  linguistic.py  registry.py  structural.py
src/langquality/config/: __init__.py  loader.py  models.py
src/langquality/data/: __init__.py  generic_loader.py  loader.py  models.py  tokenizers.py  validator.py
src/langquality/language_packs/: README.md  __init__.py  manager.py  models.py  templates.py  validation.py
src/langquality/language_packs/packs/: .gitkeep
src/langquality/language_packs/packs/_template/: README.md  config.yaml  metadata.json
src/langquality/language_packs/packs/_template/resources/: .gitkeep  gender_stereotypes.json.example  gender_terms.json.example  lexicon.txt.example  professions.json.example  stopwords.txt.example
src/langquality/language_packs/packs/cmp/: README.md  config.yaml  metadata.json
src/langquality/language_packs/packs/cmp/resources/: gender_terms.json  lexicon.txt  professions.json  stopwords.txt
src/langquality/language_packs/packs/eng/: README.md  config.yaml  metadata.json
src/langquality/language_packs/packs/eng/resources/: gender_stereotypes.json  gender_terms.json  lexicon.txt  professions.json
src/langquality/language_packs/packs/fon/: README.md  config.yaml  metadata.json
src/langquality/language_packs/packs/fon/resources/: asr_reference_vocabulary.txt  lexicon.txt  professions.json
src/langquality/language_packs/packs/fra/: README.md  config.yaml  metadata.json
src/langquality/language_packs/packs/fra/resources/: gender_stereotypes.json  gender_terms.json  lexicon.txt  professions.json  stopwords.txt
src/langquality/language_packs/packs/min/: README.md  config.yaml  metadata.json
src/langquality/outputs/: __init__.py  dashboard.py  exporters.py
src/langquality/outputs/templates/: dashboard.html
src/langquality/pipeline/: __init__.py  controller.py  results.py
src/langquality/recommendations/: __init__.py  best_practices.py  engine.py  models.py
src/langquality/resources/: .gitkeep  gender_stereotypes.json  gender_terms.json
src/langquality/utils/: __init__.py  exceptions.py  logging.py
tests/: KNOWN_ISSUES.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py
tests/data/: .gitkeep  education.csv  health.csv  test_sample.csv
tests/data/balanced_dataset/: domain1.csv  domain2.csv  domain3.csv  domain4.csv
tests/data/edge_cases/: duplicates.csv  gender_bias.csv  problematic.csv
tests/data/small_dataset/: agriculture.csv  commerce.csv  education.csv  famille.csv  sante.csv
tests/fixtures/: README.md  __init__.py
tests/fixtures/datasets/: test_english.csv  test_fongbe.csv  test_french.csv
tests/fixtures/language_packs/test_complete/: config.yaml  metadata.json
tests/fixtures/language_packs/test_complete/resources/: gender_terms.json  lexicon.txt  professions.json  stereotypes.json  stopwords.txt
tests/fixtures/language_packs/test_invalid/: config.yaml  metadata.json
tests/fixtures/language_packs/test_minimal/: config.yaml  metadata.json
tests/fixtures/plugins/: test_custom_analyzer.py  test_resource_analyzer.py
tests/integration/: test_error_handling.py  test_pipeline.py  test_pipeline_with_language_packs.py
tests/unit/: test_analyzer_registry.py  test_analyzers.py  test_analyzers_with_language_packs.py  test_data_layer.py  test_exporters.py  test_language_pack_manager.py  test_recommendation_engine.py
